added some ops
